# causepilot

./: .env.example  .gitignore  README.md  pyproject.toml  开发文档.md
feedback/: README.md
src/causepilot/: __init__.py  main.py
src/causepilot/agent/: __init__.py  diagnosis_agent.py
src/causepilot/config/: __init__.py  settings.py
src/causepilot/evals/: README.md  __init__.py
src/causepilot/feedback/: __init__.py
src/causepilot/llm/: __init__.py  factory.py  registry.py
src/causepilot/mcp/: __init__.py  client.py
src/causepilot/models/: __init__.py  alert_event.py  diagnosis_result.py
src/causepilot/prompts/: diagnosis_prompt.md
src/causepilot/retrieval/: README.md  __init__.py
src/causepilot/services/: __init__.py  diagnosis_service.py
src/causepilot/storage/: README.md  __init__.py
src/causepilot/taxonomy/: __init__.py
taxonomy/: README.md
tests/: conftest.py  test_diagnosis_service.py  test_mcp_client.py  test_models.py
